--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </main>
 
     <footer class="footer">
-        <p>To be continued... ❤️</p>
+        <p>I love you Lakshita ❤️</p>
         <img src="images/sticker_heart.png" style="width: 30px; margin: 20px auto; display: block;">
     </footer>
 
@@ -156,5 +156,6 @@
     <script src="https://unpkg.com/lenis@1.0.45/dist/lenis.min.js"></script>
     <script src="script.js"></script>
 </body>
+
 
 </html>
